feat: Milestone 1 - Bootstrap
Scaffold multi-module Maven microservices project for loomcrete:

- Parent POM with all service modules
- BOM module for centralized dependency versions (Quarkus 3.8.6, Java 21)
- domain-events shared module for domain event records
- Three Quarkus service modules: tenant-service, inventory-service, reservation-service
  - Each with basic REST health check endpoints
  - PostgreSQL JDBC + Hibernate Panache configured (external, not Dev Services)
  - application.yml configured for local dev with Docker infrastructure

Build infrastructure:
- docker-compose.local.yml orchestrates Postgres, Kafka, Zookeeper
- init-postgres.sql creates per-service databases
- .gitignore for Maven/IDE artifacts
- README with quick-start guide and troubleshooting

Status:
- mvn clean verify passes (all 6 modules compile successfully)
- Services ready to start on ports 8081, 8082, 8083
- Java 21 --enable-preview flag enabled for structured concurrency, sealed types
- Next: Milestone 2 (Domain model - Reservation sealed hierarchy, unit tests)
Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>